<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FontLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="preference_example">Preference</string>
    <string name="text_view">Text view</string>
    <string name="edit_text">Edit text</string>
    <string name="check_box">Check box</string>
    <string name="checked_text_view">Checked text view</string>
    <string name="radio_button">Radio button</string>
    <string name="autocomplete_text_view">Autocomplete</string>
    <string name="multi_autocomplete">Multi autocomplete</string>
    <string name="layout_example">From layout</string>
    <string name="code_example">From code</string>
    <string name="title_activity_layout_activity_example">LayoutActivityExample</string>
    <string name="button">Button</string>
    <string name="title_activity_code_example">CodeExampleActivity</string>
    <string name="title_activity_recycler_view_example">RecyclerViewExampleActivity</string>
    <string name="title_activity_magic_font_span_example">MagicFontSpanExampleActivity</string>
    <string name="recycler_view_example">RecyclerView example</string>
    <string name="magic_font_span_example">MagicFontSpan example</string>
    <string name="title_activity_custom_view">CustomViewExampleActivity</string>
    <string name="custom_view_example">Custom View example</string>
    <string name="example_item_s">Example item %s</string>
    <string name="load_items">Load items</string>
    <string name="list_is_empty">List is empty!</string>

    <string name="magic_font_span_text">You can change the font to parts of the text by using MagicFontSpan! Like this!</string>

</resources>
