<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.ivankocijan.TestApp.activites.MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <com.ivankocijan.magicviews.views.MagicButton
                android:text="@string/preference_example"
                android:id="@+id/preference_example"
                android:padding="@dimen/padding"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                app:typeFace="cha_chicle.otf"
                android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatButton
                android:text="@string/preference_example"
                android:padding="@dimen/padding"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    <com.ivankocijan.magicviews.views.MagicTextView
            android:text="@string/text_view"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:layout_width="wrap_content"
            app:typeFace="galderglynn_esq_bk.otf"
            android:layout_height="wrap_content"/>


    <com.ivankocijan.magicviews.views.MagicEditText
            android:hint="@string/edit_text"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:layout_width="wrap_content"
            app:typeFace="unvoll.ttf"
            android:layout_height="wrap_content"/>

    <com.ivankocijan.magicviews.views.MagicCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:text="@string/check_box"
            app:typeFace="cha_chicle.otf"/>

    <com.ivankocijan.magicviews.views.MagicCheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:text="@string/checked_text_view"
            app:typeFace="gentius.otf"/>


</LinearLayout>


        </ScrollView>
